# ToDoList_App

./: .env  .env.example  .gitignore  README.md  TESTING.md  VALIDATION_TESTS.py  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  alembic.ini  env.py
alembic/versions/: f7c2085f4ec1_initial_migration.py
docs/: API_OPENAPI_ENDPOINTS.md  API_ROUTES.md  CLI_COMMAND_API_MAPPING.md  CLI_DEPRECATION_NOTICE.md  DEPRECATION_REMOVAL_CHECKLIST.md  EXCEPTIONS_AND_LOGGING.md  EXCEPTIONS_LOGGING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  TESTING.md  migration-guide.md
docs/snippets/: cli-service-example.md
tests/: __init__.py  conftest.py  test_db_connection.py  test_db_setup.py  test_models.py
todo_app/: __init__.py  config.py  main.py
todo_app/app/: main.py
todo_app/app/api/v1/: __init__.py  schemas.py
todo_app/app/api/v1/routers/: __init__.py  minimal_todos.py  projects.py  tasks.py  users.py
todo_app/cli/: __init__.py  console.py
todo_app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
todo_app/db/: __init__.py  base.py  session.py
todo_app/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
todo_app/models/: __init__.py  project.py  task.py
todo_app/repositories/: __init__.py  abstract.py  project_repository.py  sqlalchemy_repository.py  task_repository.py
todo_app/services/: project_manager.py  task_manager.py  user_manager.py
todo_app/utils/: deprecation.py  logging_config.py  validators.py
